--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
   <script src="js/card.js"></script>
   <script src="js/filter.js"></script>
   <script src="js/form.js"></script>
+  <script src="js/image.js"></script>
   <script src="js/map.js"></script>
 </body>
 </html>
