--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <fieldset class="ad-form__element" disabled>
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
-          <input id="price" name="price" type="number" max="1000000" required placeholder="1000">
+          <input id="price" name="price" type="number" max="1000000" required placeholder="1000" min="1000">
         </fieldset>
 
         <fieldset class="ad-form__element ad-form__element--time" disabled>
